Concatenated client side files, and set up minification. Trying to resolve a bug with the concatenated file.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,6 +30,8 @@
   <div class='message'></div>
 </script>
 
+<script src='/dist/production.js'></script>
+
 <script>
   $(function(){
     new Shortly();
