--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,12 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>Shortly</title>
-    <link rel="stylesheet" type="text/css" href="/style.css">
+    <link rel="stylesheet" type="text/css" href="/dist/style.min.css">
 
-<script src="/lib/jquery.js"></script>
-    <script src="/lib/underscore.js"></script>
-    <script src="/lib/backbone.js"></script>
-     <script src="/lib/handlebars.js"></script>
+    <script src='/dist/production_lib.min.js'></script>
+
   </head>
 
   <body>
